# acousticBlockageSensor

./: K-means.py  data anlysis.ipynb  experimental_data_analysis.ipynb  first_test_analysis.ipynb  first_test_data_analysis.ipynb  main.py  pyproject.toml
Audio Spectrum 2026-01-26 15-17-40/: FFT Spectrum.csv  Peak History.csv  Raw data.csv
Audio Spectrum 2026-01-26 15-17-40/meta/: device.csv  time.csv
