[project]
name = "audio-blockage-sensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "llvmlite>=0.42",
    "matplotlib>=3.10.8",
    "numpy<2.4",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
]
